# Tweet_browser

./: .gitignore  README.md  pyproject.toml  simple_tweet_browser.ipynb  test_table.ipynb  tweet_browser.py  tweet_browser_with_search.ipynb  tweet_tester.py
.ipynb_checkpoints/: simple_tweet_browser-checkpoint.ipynb  twet_browser_with_search-checkpoint.ipynb
Frontend/: Dockerfile  ai_summary.py  custom_widgets.py  demo_withserver.py  jupyter_notebook_config.py  prompts.py  requirements.txt  searchBar.css  searchBar.js  test copy.ipynb  test.ipynb  tweet_browser.ipynb  tweet_browser.py  ui_modules.py
Frontend/Tweet_browser_test/: .coveragerc  .gitignore  LICENSE.txt  README.md  Tweet_browser_frontend.json  codecov.yml  install.json  package-lock.json  package.json  pyproject.toml  pytest.ini  webpack.config.js
Frontend/Tweet_browser_test/Tweet_browser_frontend/: __init__.py  _frontend.py  _version.py  widget.py
Frontend/Tweet_browser_test/Tweet_browser_frontend/nbextension/: extension.js
Frontend/Tweet_browser_test/Tweet_browser_frontend/tests/: conftest.py  test_example.py  test_nbextension_path.py
Frontend/Tweet_browser_test/docs/: Makefile  environment.yml  make.bat
Frontend/Tweet_browser_test/docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
Frontend/Tweet_browser_test/examples/: introduction.ipynb
Frontend/Tweet_browser_test/src/: extension.ts  index.ts  plugin.ts  version.ts  widget.ts
Frontend/anywidget/: aiSummary.css  aiSummary.js  datasetDisplay.css  datasetDisplay.js  datasetDisplayPart.js  dummyscript.js  loadingScreen.css  loadingScreen.js  misc.css  pageSelect.css  pageSelect.js  parameterDisplay.css  parameterDisplay.js  sampleSelector.css  sampleSelector.js  searchBar.css  searchBar.js  searchHistory.css  searchHistory.js  semanticSearch.css  semanticSearch.js  sortBar.css  sortBar.js  stanceAnalysis.css  stanceAnalysis.js  toggleSwitch.css  toggleSwitch.js  tweetDisplay.css  tweetDisplay.js  typicalSampleSelector.css  typicalSampleSelector.js  weightBy.css  weightBy.js
Frontend/docker/: app.py  jupyter_notebook_config.py  main.js
docker/: .dockerignore  Dockerfile  simple_tweet_browser.ipynb  tweet_browser.ipynb  tweet_browser_simple_search.ipynb  tweet_browser_with_search.ipynb
docker/.ipynb_checkpoints/: tweet_browser-checkpoint.ipynb  tweet_browser_simple_search-checkpoint.ipynb  tweet_browser_with_search-checkpoint.ipynb
docker/Data/: viewHistory.py
src/tweet_browser_test/: ai_summary.py  tweet_browser.py
tests/: jupyter_notebook_config.py  sbert_convert.py  tests.py  tweet_tester.py
