[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tweet_browser_test"
version = "0.0.11"
authors = [
  { name="Erik Zhou", email="erzh@umich.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Erikzhou2021/Tweet_browser"